--- a/src/pug/components/powercontrol/_assembly.pug
+++ b/src/pug/components/powercontrol/_assembly.pug
@@ -3,6 +3,8 @@
 section#assembly.assembly
   .c-grid
 
+    img.assembly__img.assembly__img--mobile(src="./img/img-assembly-0.jpg" srcset="./img/img-assembly-0@2x.jpg 2x" alt="" title="")
+
     .assembly__header
       div
         p.assembly__title!= "Montaż wraz z pomiarami na hamowni MAHA"
@@ -19,7 +21,7 @@ section#assembly.assembly
               span.assembly__list-num!= "1"
               span.assembly__list-line
             div
-              h3!= "Umów się"
+              h3!= "<span>1.</span>Umów się"
               p!= "<span>Skontaktuj się z nami</span>, aby umówić się na wybrany przez siebie termin. Pamiętaj, że zawsze z chęcią odpowiemy na wszystkie Twoje pytania — jesteśmy dla Was dostępni przez cały czas."
 
           li.assembly__list-item
@@ -27,7 +29,7 @@ section#assembly.assembly
               span.assembly__list-num!= "2"
               span.assembly__list-line
             div
-              h3!= "Przyjedź"
+              h3!= "<span>2.</span>Przyjedź"
               p!= "Przed montażem oraz pomiarami, nasz pracownik przekaże Ci wszystkie dokumenty związane z Twoim zakupem oraz poinformuje o tym, jak będzie przebiegała procedura. Operacja trwa zazwyczaj od 1,5h do 2,5h a Ty możesz czekać na miejscu w komfortowej poczekalni."
 
           li.assembly__list-item
@@ -35,7 +37,7 @@ section#assembly.assembly
               span.assembly__list-num!= "3"
               span.assembly__list-line
             div
-              h3!= "Pierwsze pomiary"
+              h3!= "<span>3.</span>Pierwsze pomiary"
               p!= "Wykonane zostaną pomiary Twojego auta przed modyfikacją, abyśmy mieli punkt odniesienia. Dysponujemy nowoczesną hamownią obciążeniową 4×4 firmy Dynoproject, więc możemy zmierzyć każdy rodzaj pojazdu."
 
           li.assembly__list-item
@@ -43,7 +45,7 @@ section#assembly.assembly
               span.assembly__list-num!= "4"
               span.assembly__list-line
             div
-              h3!= "Montaż oraz pomiary po modyfikacji"
+              h3!= "<span>4.</span>Montaż oraz pomiary po modyfikacji"
               p!= "Przeprowadzimy montaż Performance Pack w Twoim pojeździe. Następnie wykonamy kolejne pomiary na hamowni celem wybrania najlepszego programu oraz ustawień dla Twojego samochodu."
 
           li.assembly__list-item
@@ -51,12 +53,14 @@ section#assembly.assembly
               span.assembly__list-num!= "5"
 
             div
-              h3!= "Odbiór pojazdu"
+              h3!= "<span>5.</span>Odbiór pojazdu"
               p!= "Po modyfikacji zaprezentujemy Ci wynik wraz z nałożonymi na siebie wykresami przed i po modyfikacji, przez co będziesz mógł łatwo ocenić wyniki naszej pracy. Następnie pokażemy Ci, jak został zamontowany moduł oraz przekażemy wszelkie uwagi, abyś w przyszłości mógł samemu zdemontować moduł i okablowanie przed wizytą w serwisie. Odbędziemy też krótką jazdę próbną z Tobą, abyś finalnie mógł odebrać swój „nowy” samochód."
 
       .assembly__wrapper-right
         
         img(src="./img/img-assembly-0.jpg" srcset="./img/img-assembly-0@2x.jpg 2x" alt="" title="")
         img(src="./img/img-assembly-1.jpg" srcset="./img/img-assembly-1@2x.jpg 2x" alt="" title="")
+
+    img.assembly__img.assembly__img--mobile(src="./img/img-assembly-1.jpg" srcset="./img/img-assembly-1@2x.jpg 2x" alt="" title="")
 
 // SECTION assembly :: END
