--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -12699,7 +12699,15 @@ section.section {
   background-color: #ecf7ff;
 }
 
-/* line 6, src/scss/_components/powercontrol/_period.scss */
+@media screen and (max-width: 575px) {
+  /* line 6, src/scss/_components/powercontrol/_period.scss */
+  .period .c-grid {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+/* line 13, src/scss/_components/powercontrol/_period.scss */
 .period__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12712,7 +12720,17 @@ section.section {
   padding-bottom: 15px;
 }
 
-/* line 13, src/scss/_components/powercontrol/_period.scss */
+@media screen and (max-width: 575px) {
+  /* line 13, src/scss/_components/powercontrol/_period.scss */
+  .period__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+/* line 25, src/scss/_components/powercontrol/_period.scss */
 .period__wrapper-left {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12727,22 +12745,111 @@ section.section {
   padding-right: 90px;
 }
 
-/* line 21, src/scss/_components/powercontrol/_period.scss */
+@media screen and (max-width: 991px) {
+  /* line 25, src/scss/_components/powercontrol/_period.scss */
+  .period__wrapper-left {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 200px;
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 25, src/scss/_components/powercontrol/_period.scss */
+  .period__wrapper-left {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+
+/* line 42, src/scss/_components/powercontrol/_period.scss */
 .period__wrapper-right {
   width: 100%;
   max-width: calc(100% - 357px);
 }
 
-/* line 27, src/scss/_components/powercontrol/_period.scss */
-.period__title {
-  padding-bottom: 36px;
-  font-size: 48px;
-  font-weight: bold;
+@media screen and (max-width: 991px) {
+  /* line 42, src/scss/_components/powercontrol/_period.scss */
+  .period__wrapper-right {
+    max-width: calc(100% - 200px);
+  }
 }
 
-/* line 33, src/scss/_components/powercontrol/_period.scss */
+@media screen and (max-width: 575px) {
+  /* line 42, src/scss/_components/powercontrol/_period.scss */
+  .period__wrapper-right {
+    max-width: 100%;
+  }
+}
+
+/* line 54, src/scss/_components/powercontrol/_period.scss */
+.period__title {
+  font-weight: bold;
+  padding-bottom: 18px;
+  font-size: 24px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 54, src/scss/_components/powercontrol/_period.scss */
+  .period__title {
+    padding-bottom: calc(18px + 18 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 54, src/scss/_components/powercontrol/_period.scss */
+  .period__title {
+    padding-bottom: 36px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 54, src/scss/_components/powercontrol/_period.scss */
+  .period__title {
+    font-size: calc(24px + 24 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 54, src/scss/_components/powercontrol/_period.scss */
+  .period__title {
+    font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 54, src/scss/_components/powercontrol/_period.scss */
+  .period__title {
+    text-align: center;
+  }
+}
+
+/* line 63, src/scss/_components/powercontrol/_period.scss */
 .period__text {
-  font-size: 18px;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 63, src/scss/_components/powercontrol/_period.scss */
+  .period__text {
+    font-size: calc(14px + 4 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 63, src/scss/_components/powercontrol/_period.scss */
+  .period__text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 63, src/scss/_components/powercontrol/_period.scss */
+  .period__text {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 575px) {
