--- a/src/scss/_components/powercontrol/_period.scss
+++ b/src/scss/_components/powercontrol/_period.scss
@@ -3,12 +3,24 @@
 .period {
   background-color: #ecf7ff;
 
+  .c-grid {
+    @include respond(max-extra-small) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+
   &__wrapper {
     display: flex;
     align-items: center;
     min-height: 287px;
     padding-top: 15px;
     padding-bottom: 15px;
+    @include respond(max-extra-small) {
+      flex-wrap: wrap;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
 
     &-left {
       display: flex;
@@ -16,22 +28,43 @@
       justify-content: flex-end;
       width: 357px;
       padding-right: 90px;
+      @include respond(max-medium) {
+        justify-content: center;
+        width: 200px;
+        padding-right: 0;
+      }
+      @include respond(max-extra-small) {
+        width: 100%;
+        margin-bottom: 15px;
+      }
     }
 
     &-right {
       width: 100%;
       max-width: calc(100% - 357px);
+      @include respond(max-medium) {
+        max-width: calc(100% - 200px);
+      }
+      @include respond(max-extra-small) {
+        max-width: 100%;
+      }
     }
   }
 
   &__title {
-    padding-bottom: 36px;
-    font-size: 48px;
     font-weight: bold;
+    @include fluid(padding-bottom, 320px, 1440px, 18px, 36px);
+    @include fluid(font-size, 320px, 1440px, 24px, 48px);
+    @include respond(max-extra-small) {
+      text-align: center;
+    }
   }
 
   &__text {
-    font-size: 18px;
+    @include fluid(font-size, 320px, 1440px, 14px, 18px);
+    @include respond(max-extra-small) {
+      text-align: center;
+    }
   }
 }
 
