--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -9647,7 +9647,15 @@ section.section {
   display: flex;
 }
 
-/* line 36, src/scss/_components/pedalbox/_item.scss */
+@media screen and (max-width: 767px) {
+  /* line 31, src/scss/_components/pedalbox/_item.scss */
+  .p-powercontrol .item__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+/* line 39, src/scss/_components/pedalbox/_item.scss */
 .item__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9658,7 +9666,7 @@ section.section {
 }
 
 @media screen and (max-width: 767px) {
-  /* line 36, src/scss/_components/pedalbox/_item.scss */
+  /* line 39, src/scss/_components/pedalbox/_item.scss */
   .item__row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -9667,7 +9675,7 @@ section.section {
   }
 }
 
-/* line 43, src/scss/_components/pedalbox/_item.scss */
+/* line 46, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__row {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -9676,63 +9684,70 @@ section.section {
   width: 50%;
 }
 
-/* line 48, src/scss/_components/pedalbox/_item.scss */
+@media screen and (max-width: 767px) {
+  /* line 46, src/scss/_components/pedalbox/_item.scss */
+  .p-powercontrol .item__row {
+    width: 100%;
+  }
+}
+
+/* line 54, src/scss/_components/pedalbox/_item.scss */
 .item__row-0 {
   padding-bottom: 61px;
 }
 
 @media screen and (min-width: 320px) {
-  /* line 48, src/scss/_components/pedalbox/_item.scss */
+  /* line 54, src/scss/_components/pedalbox/_item.scss */
   .item__row-0 {
     padding-bottom: calc(61px + 113 * (100vw - 320px) / 1600);
   }
 }
 
 @media screen and (min-width: 1920px) {
-  /* line 48, src/scss/_components/pedalbox/_item.scss */
+  /* line 54, src/scss/_components/pedalbox/_item.scss */
   .item__row-0 {
     padding-bottom: 174px;
   }
 }
 
-/* line 52, src/scss/_components/pedalbox/_item.scss */
+/* line 58, src/scss/_components/pedalbox/_item.scss */
 .item__row-left {
   position: relative;
   width: 450px;
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 52, src/scss/_components/pedalbox/_item.scss */
+  /* line 58, src/scss/_components/pedalbox/_item.scss */
   .item__row-left {
     width: 300px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  /* line 52, src/scss/_components/pedalbox/_item.scss */
+  /* line 58, src/scss/_components/pedalbox/_item.scss */
   .item__row-left {
     width: 100%;
     margin-bottom: 51px;
   }
 }
 
-/* line 63, src/scss/_components/pedalbox/_item.scss */
+/* line 69, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__row-left {
   width: 100%;
 }
 
 @media screen and (max-width: 767px) {
-  /* line 67, src/scss/_components/pedalbox/_item.scss */
+  /* line 73, src/scss/_components/pedalbox/_item.scss */
   .item__row-left .item__mobile {
     display: block;
   }
-  /* line 71, src/scss/_components/pedalbox/_item.scss */
+  /* line 77, src/scss/_components/pedalbox/_item.scss */
   .item__row-left .item__mobile > * {
     display: block;
   }
 }
 
-/* line 77, src/scss/_components/pedalbox/_item.scss */
+/* line 83, src/scss/_components/pedalbox/_item.scss */
 .item__row-left:after {
   content: '';
   z-index: -1;
@@ -9751,12 +9766,12 @@ section.section {
           transform: skewX(-15deg);
 }
 
-/* line 92, src/scss/_components/pedalbox/_item.scss */
+/* line 98, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__row-left:after {
   max-width: 399px;
 }
 
-/* line 97, src/scss/_components/pedalbox/_item.scss */
+/* line 103, src/scss/_components/pedalbox/_item.scss */
 .item__row-left img {
   display: block;
   max-width: 100%;
@@ -9765,32 +9780,32 @@ section.section {
   margin-right: auto;
 }
 
-/* line 106, src/scss/_components/pedalbox/_item.scss */
+/* line 112, src/scss/_components/pedalbox/_item.scss */
 .item__row-right {
   width: 100%;
   max-width: calc(100% - 450px);
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 106, src/scss/_components/pedalbox/_item.scss */
+  /* line 112, src/scss/_components/pedalbox/_item.scss */
   .item__row-right {
     max-width: calc(100% - 300px);
   }
 }
 
 @media screen and (max-width: 767px) {
-  /* line 106, src/scss/_components/pedalbox/_item.scss */
+  /* line 112, src/scss/_components/pedalbox/_item.scss */
   .item__row-right {
     max-width: 100%;
   }
 }
 
-/* line 116, src/scss/_components/pedalbox/_item.scss */
+/* line 122, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__row-right {
   max-width: 100%;
 }
 
-/* line 122, src/scss/_components/pedalbox/_item.scss */
+/* line 128, src/scss/_components/pedalbox/_item.scss */
 .item__subtitle {
   line-height: 1.25;
   font-weight: bold;
@@ -9799,65 +9814,72 @@ section.section {
 }
 
 @media screen and (min-width: 320px) {
-  /* line 122, src/scss/_components/pedalbox/_item.scss */
+  /* line 128, src/scss/_components/pedalbox/_item.scss */
   .item__subtitle {
     padding-bottom: calc(30px + 35 * (100vw - 320px) / 1600);
   }
 }
 
 @media screen and (min-width: 1920px) {
-  /* line 122, src/scss/_components/pedalbox/_item.scss */
+  /* line 128, src/scss/_components/pedalbox/_item.scss */
   .item__subtitle {
     padding-bottom: 65px;
   }
 }
 
 @media screen and (min-width: 320px) {
-  /* line 122, src/scss/_components/pedalbox/_item.scss */
+  /* line 128, src/scss/_components/pedalbox/_item.scss */
   .item__subtitle {
     font-size: calc(36px + 12 * (100vw - 320px) / 1600);
   }
 }
 
 @media screen and (min-width: 1920px) {
-  /* line 122, src/scss/_components/pedalbox/_item.scss */
+  /* line 128, src/scss/_components/pedalbox/_item.scss */
   .item__subtitle {
     font-size: 48px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  /* line 122, src/scss/_components/pedalbox/_item.scss */
+  /* line 128, src/scss/_components/pedalbox/_item.scss */
   .item__subtitle {
     display: none;
     text-align: center;
   }
 }
 
-/* line 132, src/scss/_components/pedalbox/_item.scss */
+/* line 138, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__subtitle {
   margin-top: 60px;
   text-align: center;
 }
 
-/* line 137, src/scss/_components/pedalbox/_item.scss */
+@media screen and (max-width: 767px) {
+  /* line 138, src/scss/_components/pedalbox/_item.scss */
+  .p-powercontrol .item__subtitle {
+    margin-top: 0;
+  }
+}
+
+/* line 146, src/scss/_components/pedalbox/_item.scss */
 .item__subtitle span {
   color: #d6273c;
 }
 
-/* line 142, src/scss/_components/pedalbox/_item.scss */
+/* line 151, src/scss/_components/pedalbox/_item.scss */
 .item__mobile {
   display: none;
 }
 
 @media screen and (max-width: 767px) {
-  /* line 142, src/scss/_components/pedalbox/_item.scss */
+  /* line 151, src/scss/_components/pedalbox/_item.scss */
   .item__mobile {
     display: block;
   }
 }
 
-/* line 150, src/scss/_components/pedalbox/_item.scss */
+/* line 159, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__image {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9868,12 +9890,12 @@ section.section {
   min-height: 273px;
 }
 
-/* line 158, src/scss/_components/pedalbox/_item.scss */
+/* line 167, src/scss/_components/pedalbox/_item.scss */
 .item__block .product__box-footer {
   padding-bottom: 0;
 }
 
-/* line 162, src/scss/_components/pedalbox/_item.scss */
+/* line 171, src/scss/_components/pedalbox/_item.scss */
 .item__block ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9882,7 +9904,7 @@ section.section {
       flex-wrap: wrap;
 }
 
-/* line 166, src/scss/_components/pedalbox/_item.scss */
+/* line 175, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__block ul {
   width: 100%;
   max-width: 450px;
@@ -9890,46 +9912,46 @@ section.section {
   margin-right: auto;
 }
 
-/* line 173, src/scss/_components/pedalbox/_item.scss */
+/* line 182, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li {
   width: 50%;
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 173, src/scss/_components/pedalbox/_item.scss */
+  /* line 182, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li {
     width: 100%;
   }
 }
 
-/* line 179, src/scss/_components/pedalbox/_item.scss */
+/* line 188, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__block ul li {
   width: 100%;
 }
 
-/* line 183, src/scss/_components/pedalbox/_item.scss */
+/* line 192, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li.item__block--wm {
   margin-bottom: 0;
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 183, src/scss/_components/pedalbox/_item.scss */
+  /* line 192, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li.item__block--wm {
     margin-bottom: 51px;
   }
 }
 
-/* line 189, src/scss/_components/pedalbox/_item.scss */
+/* line 198, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__block ul li.item__block--wm {
   margin-bottom: 51px;
 }
 
-/* line 196, src/scss/_components/pedalbox/_item.scss */
+/* line 205, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li.item__block--plus > div:first-of-type {
   position: relative;
 }
 
-/* line 199, src/scss/_components/pedalbox/_item.scss */
+/* line 208, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li.item__block--plus > div:first-of-type:before {
   content: '+';
   z-index: 0;
@@ -9942,62 +9964,62 @@ section.section {
   font-weight: bold;
 }
 
-/* line 210, src/scss/_components/pedalbox/_item.scss */
+/* line 219, src/scss/_components/pedalbox/_item.scss */
 .p-powercontrol .item__block ul li.item__block--plus > div:first-of-type:before {
   display: none;
 }
 
-/* line 219, src/scss/_components/pedalbox/_item.scss */
+/* line 228, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li:first-of-type h3 {
   color: #f98911;
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 224, src/scss/_components/pedalbox/_item.scss */
+  /* line 233, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li:last-of-type {
     margin-bottom: 0;
   }
 }
 
-/* line 231, src/scss/_components/pedalbox/_item.scss */
+/* line 240, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li > div:last-of-type {
   padding-right: 15px;
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 231, src/scss/_components/pedalbox/_item.scss */
+  /* line 240, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li > div:last-of-type {
     padding-right: 0;
   }
 }
 
-/* line 239, src/scss/_components/pedalbox/_item.scss */
+/* line 248, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li h3 {
   font-size: 18px;
 }
 
 @media screen and (min-width: 320px) {
-  /* line 239, src/scss/_components/pedalbox/_item.scss */
+  /* line 248, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li h3 {
     font-size: calc(18px + 6 * (100vw - 320px) / 1120);
   }
 }
 
 @media screen and (min-width: 1440px) {
-  /* line 239, src/scss/_components/pedalbox/_item.scss */
+  /* line 248, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li h3 {
     font-size: 24px;
   }
 }
 
-/* line 243, src/scss/_components/pedalbox/_item.scss */
+/* line 252, src/scss/_components/pedalbox/_item.scss */
 .item__block ul li p,
 .item__block ul li span {
   font-size: 14px;
 }
 
 @media screen and (min-width: 320px) {
-  /* line 243, src/scss/_components/pedalbox/_item.scss */
+  /* line 252, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li p,
   .item__block ul li span {
     font-size: calc(14px + 2 * (100vw - 320px) / 1120);
@@ -10005,7 +10027,7 @@ section.section {
 }
 
 @media screen and (min-width: 1440px) {
-  /* line 243, src/scss/_components/pedalbox/_item.scss */
+  /* line 252, src/scss/_components/pedalbox/_item.scss */
   .item__block ul li p,
   .item__block ul li span {
     font-size: 16px;
