--- a/src/scss/_components/powercontrol/_generation.scss
+++ b/src/scss/_components/powercontrol/_generation.scss
@@ -4,6 +4,13 @@
   padding-top: 180px;
   padding-bottom: 65px;
 
+  > .c-grid {
+    @include respond(max-small) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+
   &__wrapper {
     &-0 {
       padding-bottom: 100px;
@@ -11,6 +18,17 @@
       .details__wrapper-2 {
         align-items: center;
         flex-direction: row;
+        @include respond(max-small) {
+          flex-direction: column;
+        }
+
+        .details__wrapper-left {
+          padding-left: 0;
+          padding-right: 15px;
+          @include respond(max-small) {
+            padding-right: 0;
+          }
+        }
       }
     }
   }
@@ -19,6 +37,11 @@
     display: flex;
     align-items: flex-start;
     padding-bottom: 50px;
+    @include respond(max-extra-small) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
     &-wrapper {
       display: flex;
@@ -30,21 +53,38 @@
       justify-content: flex-end;
       width: 350px;
       padding-right: 60px;
+      @include respond(max-medium) {
+        width: 250px;
+      }
+      @include respond(max-extra-small) {
+        width: 100%;
+        justify-content: center;
+        padding-right: 0;
+        margin-bottom: 30px;
+      }
     }
 
     &-right {
       width: 100%;
       max-width: calc(100% - 350px);
       padding-right: 100px;
+      @include respond(max-medium) {
+        max-width: calc(100% - 250px);
+        padding-right: 0;
+      }
+      @include respond(max-extra-small) {
+        max-width: 100%;
+        text-align: center;
+      }
     }
 
     &-title {
-      font-size: 24px;
       font-weight: bold;
+      @include fluid(font-size, 320px, 1440px, 18px, 24px);
     }
 
     &-text {
-      font-size: 18px;
+      @include fluid(font-size, 320px, 1440px, 14px, 18px);
     }
   }
 }
