--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -14022,7 +14022,7 @@ section.section {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 575px) {
   /* line 7, src/scss/_components/powercontrol/_assembly.scss */
   .assembly .c-grid {
     padding-left: 15px;
@@ -14405,11 +14405,39 @@ section.section {
 
 /* line 3, src/scss/_components/powercontrol/_generation.scss */
 .generation {
-  padding-top: 180px;
-  padding-bottom: 65px;
+  padding-top: 90px;
+  padding-bottom: 0px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
+  /* line 3, src/scss/_components/powercontrol/_generation.scss */
+  .generation {
+    padding-top: calc(90px + 90 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 3, src/scss/_components/powercontrol/_generation.scss */
+  .generation {
+    padding-top: 180px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 3, src/scss/_components/powercontrol/_generation.scss */
+  .generation {
+    padding-bottom: calc(0px + 65 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 3, src/scss/_components/powercontrol/_generation.scss */
+  .generation {
+    padding-bottom: 65px;
+  }
+}
+
+@media screen and (max-width: 575px) {
   /* line 7, src/scss/_components/powercontrol/_generation.scss */
   .generation > .c-grid {
     padding-left: 15px;
@@ -14589,11 +14617,47 @@ section.section {
 
 /* line 3, src/scss/_components/powercontrol/_wiring.scss */
 .wiring {
-  padding-top: 65px;
-  padding-bottom: 100px;
+  padding-top: 40px;
+  padding-bottom: 50px;
 }
 
-/* line 7, src/scss/_components/powercontrol/_wiring.scss */
+@media screen and (min-width: 320px) {
+  /* line 3, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring {
+    padding-top: calc(40px + 25 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 3, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring {
+    padding-top: 65px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 3, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring {
+    padding-bottom: calc(50px + 50 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 3, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring {
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 8, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring .c-grid {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+/* line 15, src/scss/_components/powercontrol/_wiring.scss */
 .wiring__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -14603,41 +14667,151 @@ section.section {
           align-items: center;
 }
 
-/* line 11, src/scss/_components/powercontrol/_wiring.scss */
-.wiring__wrapper-0 {
-  padding-bottom: 50px;
+@media screen and (max-width: 767px) {
+  /* line 15, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
-/* line 14, src/scss/_components/powercontrol/_wiring.scss */
+/* line 22, src/scss/_components/powercontrol/_wiring.scss */
+.wiring__wrapper-0 {
+  padding-bottom: 30px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 22, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper-0 {
+    padding-bottom: calc(30px + 20 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 22, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper-0 {
+    padding-bottom: 50px;
+  }
+}
+
+/* line 25, src/scss/_components/powercontrol/_wiring.scss */
 .wiring__wrapper-0 .wiring__wrapper-right {
   padding-left: 60px;
 }
 
-/* line 20, src/scss/_components/powercontrol/_wiring.scss */
+@media screen and (max-width: 991px) {
+  /* line 25, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper-0 .wiring__wrapper-right {
+    padding-left: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* line 33, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper-1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+/* line 38, src/scss/_components/powercontrol/_wiring.scss */
 .wiring__wrapper-1 .wiring__wrapper-left {
   padding-left: 60px;
 }
 
-/* line 25, src/scss/_components/powercontrol/_wiring.scss */
+@media screen and (max-width: 991px) {
+  /* line 38, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper-1 .wiring__wrapper-left {
+    padding-left: 0;
+  }
+}
+
+/* line 46, src/scss/_components/powercontrol/_wiring.scss */
 .wiring__wrapper-left, .wiring__wrapper-right {
   width: 100%;
   max-width: 50%;
 }
 
-/* line 36, src/scss/_components/powercontrol/_wiring.scss */
-.wiring__title {
-  padding-bottom: 40px;
-  font-size: 48px;
-  font-weight: bold;
+@media screen and (max-width: 767px) {
+  /* line 46, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__wrapper-left, .wiring__wrapper-right {
+    max-width: 100%;
+  }
 }
 
-/* line 42, src/scss/_components/powercontrol/_wiring.scss */
+@media screen and (max-width: 767px) {
+  /* line 56, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__title, .wiring__text {
+    text-align: center;
+  }
+}
+
+/* line 63, src/scss/_components/powercontrol/_wiring.scss */
+.wiring__title {
+  font-weight: bold;
+  padding-bottom: 20px;
+  font-size: 24px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 63, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__title {
+    padding-bottom: calc(20px + 20 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 63, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__title {
+    padding-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 63, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__title {
+    font-size: calc(24px + 24 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 63, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__title {
+    font-size: 48px;
+  }
+}
+
+/* line 69, src/scss/_components/powercontrol/_wiring.scss */
 .wiring__text {
   padding-bottom: 30px;
   padding-right: 15px;
   padding-left: 15px;
   line-height: 1.6;
-  font-size: 18px;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 69, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__text {
+    font-size: calc(14px + 4 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 69, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* line 69, src/scss/_components/powercontrol/_wiring.scss */
+  .wiring__text {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 /* line 3, src/scss/_components/powercontrol/_created.scss */
