--- a/src/pug/components/powercontrol/_created.pug
+++ b/src/pug/components/powercontrol/_created.pug
@@ -9,6 +9,8 @@ section#created.created
   .c-grid
     .created__wrapper
 
+      img.created__img.created__img--mobile(src="./img/img-created-0.jpg" srcset="./img/img-created-0@2x.jpg 2x" alt="" title="")
+
       .assembly__header
         div
           p.assembly__title!= "Jak powstaje program dla Twojego pojazdu"
@@ -22,7 +24,7 @@ section#created.created
               span.assembly__list-num!= "1"
               span.assembly__list-line
             div
-              h3!= "Pierwszy kontakt"
+              h3!= "<span>1.</span>Pierwszy kontakt"
               p!= "Samochód otrzymujemy od producenta lub jego lokalnego przedstawiciela. Często dostajemy również wytyczne od producenta określające charakterystykę danego silnika oraz jego seryjne ograniczenia, co pomaga nam w ustaleniu jego bezpiecznych limitów."
 
           li.assembly__list-item
@@ -30,7 +32,7 @@ section#created.created
               span.assembly__list-num!= "2"
               span.assembly__list-line
             div
-              h3!= "Pomiary"
+              h3!= "<span>2.</span>Pomiary"
               p!= "Następnie wykonujemy wszelkie niezbędne pomiary elementów silnika, sczytujemy najważniejsze wartości z pojazdu oraz robimy kilkanaście pomiarów na hamowni celem określenia seryjnych parametrów. Sprawdzamy również zachowanie silnika pod różnym typem obciążenia."
 
           li.assembly__list-item
@@ -38,19 +40,21 @@ section#created.created
               span.assembly__list-num!= "3"
               span.assembly__list-line
             div
-              h3!= "Test samochodu"
+              h3!= "<span>3.</span>Test samochodu"
               p!= "Opracowujemy następnie kilka map, które testujemy przez najbliższe dwa tygodnie. Silnik poddawany jest testom wytrzymałościowym oraz wydajnościowym. Sprawdzamy również działanie seryjnych zabezpieczeń silnika, aby upewnić się, że finalny program jest w stu procentach bezpieczny."
 
           li.assembly__list-item
             div
               span.assembly__list-num!= "4"
             div
-              h3!= "Instalacja"
+              h3!= "<span>4.</span>Instalacja"
               p!= "Dopiero po wykonaniu tych wszystkich czynności typujemy jeden, najlepszy program, który dostarcza zarówno dużego przyrostu mocy jak i momentu obrotowego, ale zarówno jest możliwie bezpieczny dla silnika. Za każdym razem musimy się upewnić, że silnik będzie pracował poprawnie w każdych warunkach i zachowa swoje parametry, nawet kiedy będzie przegrzany lub dostanie kiepskiej jakości paliwo. Przejście przez tak długi proces powoduje, że jesteśmy w stanie zaoferować naszym klientom rozszerzoną gwarancję na pojazd oraz otrzymać bardzo prestiżową certyfikację urzędu TÜV."
 
       .assembly__wrapper-right
 
         img(src="./img/img-created-0.jpg" srcset="./img/img-created-0@2x.jpg 2x" alt="" title="")
         img(src="./img/img-created-1.jpg" srcset="./img/img-created-1@2x.jpg 2x" alt="" title="")
+
+    img.created__img.created__img--mobile(src="./img/img-created-1.jpg" srcset="./img/img-created-1@2x.jpg 2x" alt="" title="")
 
 // SECTION created :: END
