--- a/src/scss/_components/powercontrol/_control.scss
+++ b/src/scss/_components/powercontrol/_control.scss
@@ -7,8 +7,16 @@
   &__title {
     padding-left: 90px;
     padding-bottom: 41px;
-    font-size: 48px;
     font-weight: bold;
+    @include fluid(font-size, 320px, 1440px, 24px, 48px);
+    @include respond(max-extra-large) {
+      padding-left: 0;
+    }
+    @include respond(max-small) {
+      text-align: center;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
   }
 
   &__name {
@@ -19,20 +27,28 @@
   &__info {
     display: flex;
     align-items: center;
+    @include respond(max-large) {
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
 
     &:nth-of-type(1) {
       margin-right: 37px;
+
+      @include respond(max-large) {
+        margin-right: 0;
+      }
     }
 
     p {
-      font-size: 18px;
       padding-right: 12px;
+      @include fluid(font-size, 320px, 1440px, 14px, 18px);
     }
 
     span {
       padding-left: 12px;
-      font-size: 24px;
       font-weight: bold;
+      @include fluid(font-size, 320px, 1440px, 16px, 24px);
     }
   }
 }
