--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -190,16 +190,28 @@
             display: flex;
             align-items: center;
             padding-top: 30px;
+            @include respond(max-large) {
+              flex-direction: column;
+            }
 
             > div {
               &:nth-of-type(1) {
                 width: 30%;
+                @include respond(max-large) {
+                  width: 100%;
+                  text-align: center;
+                }
               }
               &:nth-of-type(2) {
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
                 width: 70%;
+                @include respond(max-large) {
+                  flex-direction: column;
+                  justify-content: center;
+                  width: 100%;
+                }
               }
             }
           }
